@@ -60,12 +60,12 @@
         <!--               -->
 
         <string id="32120">Transcode BluRay to mkv (confirmend)</string>
-        <string id="32121">TEST-2</string>
-        <string id="32122">TEST-3</string>
-        <string id="32123">TEST-4</string>
-        <string id="32124">TEST-5</string>      
-        <string id="32125">TEST-6</string>
-        <string id="32126">TEST-1</string>
+        <string id="32121"> </string>
+        <string id="32122"> </string>
+        <string id="32123"> </string>
+        <string id="32124"> </string>      
+        <string id="32125"> </string>
+        <string id="32126"> </string>
         <string id="32127">Test ssh connection</string>
         <string id="32128">Info</string>
         <string id="32129">Back</string>
@@ -130,10 +130,11 @@
         <string id="33217"> </string>
         <string id="33218">ssh-test connection was successfull</string>
         <string id="33219">ssh-test connection failed</string>
-        
-        
+        <string id="33220">Please select direcory</string>
+        <string id="33221">Direcory-name contains spaces</string>
+        <string id="33222">Selected direcory is not writeable</string>
  
-        <!--               --> 
+        <!--               -->
         <!-- Error         -->
         <!--               -->
         
